# wood_cpp

./: .gitignore  README.md  annotated.html  annotated_dup.js  authors_8md.html  box_8h_source.html  bug.html  cgal__box__search_8h.html  cgal__box__search_8h.js  cgal__box__search_8h_source.html  cgal__box__util_8cpp.html  cgal__box__util_8cpp.js  cgal__box__util_8cpp_source.html  cgal__box__util_8h.html  cgal__box__util_8h.js  cgal__box__util_8h_source.html  cgal__inscribe__util_8cpp.html  cgal__inscribe__util_8cpp.js  cgal__inscribe__util_8cpp_source.html  cgal__inscribe__util_8h.html  cgal__inscribe__util_8h.js  cgal__inscribe__util_8h_source.html  cgal__intersection__util_8cpp.html  cgal__intersection__util_8cpp.js  cgal__intersection__util_8cpp_source.html  cgal__intersection__util_8h.html  cgal__intersection__util_8h.js  cgal__math__util_8cpp.html  cgal__math__util_8cpp.js  cgal__math__util_8cpp_source.html  cgal__math__util_8h.html  cgal__math__util_8h.js  cgal__math__util_8h_source.html  cgal__mesh__boolean_8cpp.html  cgal__mesh__boolean_8cpp.js  cgal__mesh__boolean_8cpp_source.html  cgal__mesh__boolean_8h.html  cgal__mesh__boolean_8h.js  cgal__plane__util_8cpp.html  cgal__plane__util_8cpp.js  (+488 more)
.github/workflows/: build.yml  docs.yml  release.yml
backend/: CMakeLists.txt  main.cpp  stdafx.h
cmake/: CMakeLists.txt  main.cpp  stdafx.h
cmake/src/temp/: main_boolean_difference
cmake/src/viewer/include/imgui/: imgui_render.h
cmake/src/viewer/include/opengl/: opengl_globals_geometry.cpp  opengl_globals_geometry.h  opengl_meshes.h  opengl_render.h
cmake/src/viewer/shaders/: 2.2.basic_lighting.frag  2.2.basic_lighting.vert
cmake/src/wood/dataset/: out.xml
cmake/src/wood/include/: cgal_box_search.h  cgal_inscribe_util.cpp  cgal_intersection_util.cpp  cgal_intersection_util.h  cgal_mesh_boolean.cpp  cgal_mesh_boolean.h  cgal_plane_util.cpp  cgal_plane_util.h  cgal_polyline_mesh_util.cpp  cgal_polyline_mesh_util.h  cgal_polyline_util.cpp  cgal_polyline_util.h  cgal_vector_util.cpp  cgal_vector_util.h  clipper_util.cpp  clipper_util.h  database_writer.cpp  database_writer.h  rtree_util.cpp  test.cpp  viewer_wood.cpp  viewer_wood.h  wood_element.cpp  wood_globals.cpp  wood_globals.h  wood_joint.cpp  wood_joint.h  wood_joint_lib.cpp  wood_joint_lib.h  wood_main.cpp  wood_main.h  wood_test.cpp  wood_test.h  wood_xml.cpp
cmake/src/wood/kernel/: types.cpp  types.hpp
docs/: Doxyfile  doxygen-awesome.css  mainpage.md
docs/images/: joinery_library.ai
docs/latex/: annotated.tex  cgal__box__search_8h_source.tex  cgal__box__util_8h_source.tex  cgal__inscribe__util_8h_source.tex  cgal__intersection__util_8h_source.tex  cgal__math__util_8h_source.tex  cgal__mesh__boolean_8h_source.tex  cgal__plane__util_8h_source.tex  cgal__polyline__mesh__util_8h_source.tex  cgal__polyline__util_8h_source.tex  cgal__rectangle__util_8h_source.tex  cgal__vector__util_8h_source.tex  cgal__xform__util_8h_source.tex  class_r_t_file_stream.tex  class_r_tree.tex  class_r_tree_1_1_iterator.tex  classwood_1_1element.tex  classwood_1_1joint.tex  clipper__util_8h_source.tex  files.tex  hierarchy.tex  index.tex  refman.tex  rtree_8h_source.tex  rtree__util_8h_source.tex  struct_r_tree_1_1_branch.tex  struct_r_tree_1_1_list_node.tex  struct_r_tree_1_1_node.tex  struct_r_tree_1_1_partition_vars.tex  struct_r_tree_1_1_rect.tex  structcgal__box__util_1_1internal_1_1obb.tex  structcgal__box__util_1_1internal_1_1vec3.tex  structcgal__mesh__boolean_1_1_visitor.eps  structcgal__mesh__boolean_1_1_visitor.tex  structcgal__rectangle__util_1_1internal_1_1ccw__sorter.tex  viewer__wood_8h_source.tex  wood__cut_8h_source.tex  wood__element_8h_source.tex  wood__globals_8h_source.tex  wood__joint_8h_source.tex  (+4 more)
docs/output/: annotated.html  annotated_dup.js  cgal__box__search_8h_source.html  cgal__box__util_8h_source.html  cgal__inscribe__util_8h_source.html  cgal__intersection__util_8h_source.html  cgal__math__util_8h_source.html  cgal__mesh__boolean_8h_source.html  cgal__plane__util_8h_source.html  cgal__polyline__mesh__util_8h_source.html  cgal__polyline__util_8h_source.html  cgal__rectangle__util_8h_source.html  cgal__vector__util_8h_source.html  cgal__xform__util_8h_source.html  class_r_t_file_stream-members.html  class_r_t_file_stream.html  class_r_tree-members.html  class_r_tree.html  class_r_tree.js  class_r_tree_1_1_iterator-members.html  class_r_tree_1_1_iterator.html  class_r_tree_1_1_iterator.js  classes.html  classwood_1_1element-members.html  classwood_1_1element.html  classwood_1_1element.js  classwood_1_1joint-members.html  classwood_1_1joint.html  classwood_1_1joint.js  clipper__util_8h_source.html  dir_27747142951285b09bacafa002e92b5f.html  dir_465349965ae3b3007330e028906dcb54.html  dir_512175a00f265906b65bee7fba32762f.html  dir_512175a00f265906b65bee7fba32762f.js  dir_515b88399e7a584ded14ebec306b84f1.html  dir_515b88399e7a584ded14ebec306b84f1.js  dir_9ad6092cef7fa60fd7b2aa97b8bb0a98.html  dir_9ad6092cef7fa60fd7b2aa97b8bb0a98.js  dir_a5bdbfbbaa7895161d62825676df7980.html  dir_a5bdbfbbaa7895161d62825676df7980.js  (+43 more)
docs/output/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_8.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js
frontend/: CMakeLists.txt
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_10.js  classes_3.js  classes_5.js  classes_7.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_3.js  files_5.js  (+52 more)
(+11 files in other folders)
